<resources>
    <!--app Name-->
    <string name="app_name">Movie Review Buddy</string>

    <!--menu-->
    <string name="action_most_popular">Popular Movies</string>
    <string name="action_top_rated">Top Rated Movies</string>
    <string name="movie_poster_container">Movie poster container</string>

    <!--details activity-->
    <string name="release_date"><u>Release Date</u></string>
    <string name="rating"><u>Rating</u></string>
    <string name="title"><u>Title</u></string>
    <string name="no_internet_connectivity">No Internet Connection</string>
    <string name="synopsis">Synopsis</string>
    <string name="error_loading_data">Error Loading Data</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="image_of_poster">Image of Poster</string>
    <string name="play_movie_trailer">Play Movie Trailer</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="add_to_favorites">Favorite!</string>
    <string name="the_movie_db_logo">The Movie DB Logo</string>
    <string name="no_internet">No Internet</string>
    <string name="error_requesting_data">Error requesting data from server</string>
    <string name="no_movies_added">No Movies Added To Favorites!</string>
    <string name="play_button">play button</string>
</resources>
