<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content_sv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/poster_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_of_poster"
            app:srcCompat="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/poster_iv"
            android:layout_toEndOf="@+id/poster_iv"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title"/>

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <TextView
                android:id="@+id/rating_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/rating"/>

            <TextView
                android:id="@+id/rating_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <TextView
                android:id="@+id/release_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/release_date"/>

            <TextView
                android:id="@+id/release_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <Button
                android:id="@+id/add_to_faves_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:text="@string/add_to_favorites"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/synopsis_container"
            android:layout_below="@+id/poster_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/synopsis_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/synopsis"/>

            <TextView
                android:id="@+id/overview_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <View
            android:id="@+id/synopsis_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@+id/synopsis_container"
            android:background="@color/colorPrimary"/>

        <RelativeLayout
            android:id="@+id/loading_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:background="#FFF">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/error_loading_data"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/trailers_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_below="@id/synopsis_divider"
            android:text="@string/trailers"/>

        <TableLayout
            android:id="@+id/trailers_table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:showDividers="middle"
            android:divider="@color/colorPrimary"
            android:layout_below="@+id/trailers_header">
        </TableLayout>

        <TextView
            android:id="@+id/reviews_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trailers_table_layout"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="-12dp"
            android:text="@string/reviews"/>

        <TableLayout
            android:id="@+id/review_table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="0"
            android:layout_below="@+id/reviews_header"
            android:layout_marginBottom="16dp">
        </TableLayout>

    </RelativeLayout>

</ScrollView>